[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "baseball_stats"
version = "0.1.0"
description = "A simple package to fetch MLB game data"
authors = ["Scott Stefanoski <your_email@example.com>"]
license = "MIT"

packages = [
    { include = "packages/stats_packages" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"
pandas = "^1.3"

[tool.poetry.group.dev.dependencies]
# Add any dev tools you need, like testing libraries or linters
pytest = "^6.2"
